# git-rsr-certified

./: .gitignore  CHANGELOG.adoc  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  ECOSYSTEM.scm  LICENSE  META.scm  README.adoc  README.md  ROADMAP.adoc  STATE.scm  flake.nix  guix.scm
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  mirror.yml  release.yml  rsr-antipattern.yml  rust-ci.yml  scorecard.yml  security-policy.yml  ts-blocker.yml
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
.well-known/: dc.xml  funding.json  humans.txt  security.txt
container/: compose.yml
engine/: Cargo.toml
engine/src/: lib.rs  main.rs
engine/src/adapters/: gitlab.rs
engine/src/compliance/: bronze.rs  mod.rs
engine/src/db/: cache.rs  documents.rs  graphs.rs  mod.rs
engine/src/server/: routes.rs
schemas/: rsr-config.schema.json
